--- a/param_astig_train.yaml
+++ b/param_astig_train.yaml
@@ -22,11 +22,10 @@ PSF_model:
     device_simulation: 'cuda'
   vector_psf:
     Npixels: 51
-    pixel_size_xy:
-      - 108
-      - 108
+    pixelSizeX: 108
+    pixelSizeY: 108
     objstage0: -1000
-    psf_size: 51
+    psfSizeX: 51
     NA: 1.5
     refmed: 1.406
     refcov: 1.524
@@ -37,9 +36,7 @@ PSF_model:
                    4, -2, 0, 4, 2, 0, 5, -1, 0, 5, 1, 0, 6, 0, 0, 4, -4, 0, 4, 4, 0,
                    5, -3, 0, 5, 3, 0, 6, -2, 0, 6, 2, 0, 7, 1, 0, 7, -1, 0, 8, 0, 0]
     zernikefit_file: null
-    otf_rescale_xy:
-      - 0.5
-      - 0.5
+    psfrescale: 0.5
     Npupil: 64
 Training:
   max_epoch: 50
