Update the requirement file.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-﻿imagecodecs==2023.3.16lxml==5.2.2matplotlib==3.5.1natsort==8.4.0numpy==1.24.4pandas==1.4.1PyYAML==6.0.1RecursiveNamespace==0.2.2scipy==1.8.0thop==0.1.1.post2209072238tifffile==2023.7.10torch==2.2.2tqdm==4.66.2
+﻿imagecodecs==2023.3.16lxml==5.2.2matplotlib==3.5.1natsort==8.4.0numpy==1.24.4pandas==1.4.1PyYAML==6.0.1RecursiveNamespace==0.2.2scipy==1.8.0thop==0.1.1.post2209072238tifffile==2023.7.10torch==2.2.2+cu121torchaudio==2.2.2+cu121torchvision==0.17.2+cu121-f https://download.pytorch.org/whl/torch_stable.htmltqdm==4.66.2
