--- a/train_params_demo_fig3d.yaml
+++ b/train_params_demo_fig3d.yaml
@@ -9,9 +9,9 @@ Camera:
   baseline: 100.0  # Final offset added to the image
 PSF_model:
   z_scale: 3000
-  simulate_method: 'vector'  # 'spline' or 'vector'
+  simulate_method: 'spline'  # 'spline' or 'vector'
   spline_psf:
-    calibration_file: "psf_model.mat"
+    calibration_file: "/home/user_name/datasets/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat" #Please give an absolute path.
     psf_extent:
     - - -0.5
       - 127.5
@@ -49,9 +49,9 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 2000
   - 20000
-  result_path: '/save_model_path/'  # Path to save trained model
-  infer_data: null #"/experiment_data.tif"  # Path of experimental data
-  bg: 135  # Only if 'infer_data' is null, bg will be loaded by this variable.
+  result_path: "/home/user_name/save_model_path/"  # Please give an absolute path. Path to save trained model
+  infer_data:  "/home/user_name/datasets/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3_MMStack_Pos0.ome.tif"  # Please give an absolute path. Path of experimental data
+  bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
   pn_factor: 0.2  # Should be in the range of [0,1], which implies PV degree of the added Perlin nonuniform background, set it small when experimental background looks uniform.
   pn_res: 64  # Resolution(or frequency) of the Perlin noise.
