--- a/infer_params_demo_fig3d.yaml
+++ b/infer_params_demo_fig3d.yaml
@@ -1,8 +1,8 @@
 Loc_Model:
-  model_path:  './save_model_path/checkpoint.pkl'  # Path of trained model.
+  model_path:  '/home/user_name/save_model_path_demo_fig3d/checkpoint.pkl'  # Path of trained model.
 Multi_Process:
-  image_path: "./dataset/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/"  # Path of experimental data. If multiple files need to be analysed, you should set a directory path; Otherwise, please give a file path.
-  save_path: "./results/liteloc_npc_6um_data_result.csv" # Path to save molecule list results.
+  image_path: "/home/user_name/dataset/demo-fig3d/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/"  # Path of experimental data. If multiple files need to be analysed, you should set a directory path; Otherwise, please give a file path.
+  save_path: "/home/user_name/liteloc_demo_fig3d_result.csv" # Path to save molecule list results.
   time_block_gb: 1  # Size (GB) of the data block loaded into the RAM iteratively, to deal with the large data problem.
   batch_size: 30  # Batch size for analyzing the sub-FOVs data for every GPU. The larger the faster, but more GPU memory.
   sub_fov_size: 296  # Size of sub-areas to be analyzed, must be a multiple of 4 (avoid error when down-sampling or up-sampling). If this is larger than whole image size, the entire image will be analyzed.
