--- a/train_params_demo_fig3a.yaml
+++ b/train_params_demo_fig3a.yaml
@@ -8,33 +8,30 @@ Camera:
   e_per_adu: 0.7471  # Analog-to-digital conversion factor
   baseline: 100.0  # Final offset added to the image
 PSF_model:
-  z_scale: 3000
+  z_scale: 700
   simulate_method: 'spline'  # 'spline' or 'vector'
   spline_psf:
-    calibration_file: "/home/user_name/datasets/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat" #Please give an absolute path.
+    calibration_file: "/home/user_name/datasets/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat"  #Please give an absolute path.
     psf_extent:
     - - -0.5
-      - 127.5
+      - 63.5
     - - -0.5
-      - 127.5
+      - 63.5
     - None
     device_simulation: 'cuda'
   vector_psf:
-    objstage0: -800  # Nominal focal plane with respect to the coverslip, it should be set carefully when there is a refractive index (RI) mismatch between `refmed` and `refimm`. If there is no RI mismatch, `objstage0` becomes meaningless.
+    objstage0: -500  # Nominal focal plane with respect to the coverslip, it should be set carefully when there is a refractive index (RI) mismatch between `refmed` and `refimm`. If there is no RI mismatch, `objstage0` becomes meaningless.
     zemit0: null
-    zernikefit_file: null #"psf_model.mat"  # Only if 'zernikefit_file' is null, parameter setting below works.
+    zernikefit_file: "/home/user_name/datasets/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat"  # Only if 'zernikefit_file' is null, parameter setting below works.
     pixelSizeX: 110
     pixelSizeY: 110
     psfSizeX: 51
-    NA: 1.35
+    NA: 1.5
     refmed: 1.406
     refcov: 1.524
-    refimm: 1.406
-    wavelength: 680
-    zernikefit_map: [ 2, -2,  83.10, 2,  2, -18.69, 3, -1, -7.22, 3,  1,  0.06, 4,  0, -29.13, 3, -3,  6.37,
-                      3,  3,  12.35, 4, -2, -251.89, 4,  2, -11.83, 5, -1, -14.80, 5,  1,  2.60, 6,  0, -10.62,
-                      4, -4, -23.62, 4,  4, -0.76, 5, -3, -7.32, 5,  3, -10.81, 6, -2, -30.19, 6,  2, -10.88,
-                      7,  1, -6.28, 7, -1,  0.37, 8,  0, -3.97]
+    refimm: 1.518
+    wavelength: 670
+    zernikefit_map: null
     psfrescale: 0.5
     Npupil: 64
 Training:
@@ -42,15 +39,15 @@ Training:
   eval_iteration: 500  # Evaluation will be done per 'eval_iteration' training times.
   batch_size: 16
   valid_frame_num: 100  # Number of images in evaluation dataset, these images have the same size as the training data.
-  em_per_frame: 6 # Average number of emitters per frame
+  em_per_frame: 10 # Average number of emitters per frame
   train_size:  # Size of simulated training images, set it small when GPU memory is limited.
-  - 128
-  - 128
+  - 64
+  - 64
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 2000
   - 20000
-  result_path: "/home/user_name/save_model_path_demo_fig3d/"  # Please give an absolute path. Path to save trained model
-  infer_data:  "/home/user_name/datasets/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3_MMStack_Pos0.ome.tif"  # Please give an absolute path. Path of experimental data
+  result_path: "/home/user_name/save_model_path_demo_fig3a/"  # Please give an absolute path. Path to save trained model
+  infer_data:  "/home/user_name/datasets/demo-fig3a/TOM20_NPC_U2OS_561_50mw_640_40mw_20ms_256_2_MMStack_Pos0_1.ome.tif"  # Please give an absolute path. Path of experimental data
   bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
   pn_factor: 0.2  # Should be in the range of [0,1], which implies PV degree of the added Perlin nonuniform background, set it small when experimental background looks uniform.
