--- a/train_params_demo_fig3a.yaml
+++ b/train_params_demo_fig3a.yaml
@@ -1,5 +1,5 @@
 Camera:
-  camera: 'sCMOS'  # 'sCMOS' or 'EMCCD'
+  camera: sCMOS  # 'sCMOS' or 'EMCCD'
   em_gain: 1.0  # If 'sCOMS' is used, em_gain should be set as 1.0.
   surv_p: 0.5  # Probability of on-state emitters appear in the next frame follows a simple binomial distribution since only three consecutive images are used in each unit.
   qe: 0.95  # Quantum efficiency
@@ -9,20 +9,20 @@ Camera:
   baseline: 100.0  # Final offset added to the image
 PSF_model:
   z_scale: 700
-  simulate_method: 'spline'  # 'spline' or 'vector'
+  simulate_method: vector # 'spline' or 'vector'
   spline_psf:
-    calibration_file: "/home/user_name/datasets/demo-fig3a/Beads of Astigmatism PSF/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat"  #Please give an absolute path.
+    calibration_file: /calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat  #Please give an absolute path.
     psf_extent:
     - - -0.5
       - 63.5
     - - -0.5
       - 63.5
     - None
-    device_simulation: 'cuda'
+    device_simulation: cuda
   vector_psf:
     objstage0: -500  # Nominal focal plane with respect to the coverslip, it should be set carefully when there is a refractive index (RI) mismatch between `refmed` and `refimm`. If there is no RI mismatch, `objstage0` becomes meaningless.
     zemit0: null
-    zernikefit_file: "/home/user_name/datasets/demo-fig3a/Beads of Astigmatism PSF/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat"  # Only if 'zernikefit_file' is null, parameter setting below works.
+    zernikefit_file: /calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat  # Only if 'zernikefit_file' is null, parameter setting below works.
     pixelSizeX: 110
     pixelSizeY: 110
     psfSizeX: 51
@@ -30,7 +30,7 @@ PSF_model:
     refmed: 1.406
     refcov: 1.524
     refimm: 1.518
-    wavelength: 670
+    wavelength: 680
     zernikefit_map: null
     psfrescale: 0.5
     Npupil: 64
@@ -46,12 +46,13 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 4000
   - 40000
-  result_path: "/home/user_name/results/network-demo-fig3a/"  # Please give an absolute path. Path to save trained model
-  infer_data:  "/home/user_name/datasets/demo-fig3a/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/NPC_U2OS_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif"  # Please give an absolute path. Path of experimental data
+  result_path: /training_model/liteloc_fig3a/  # Please give an absolute path. Path to save trained model
+  infer_data: /dataset/m1_oil_astig_npc/NPC_U2OS_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
   bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
   pn_factor: 0.2  # Should be in the range of [0,1], which implies PV degree of the added Perlin nonuniform background, set it small when experimental background looks uniform.
   pn_res: 64  # Resolution(or frequency) of the Perlin noise.
-  factor: null  # To be comparable with decode, but not used in liteloc network.
-  offset: null  # To be comparable with decode, but not used in liteloc network.
+  factor: null  # To be compatible with decode, but not used in liteloc network.
+  offset: null  # To be compatible with decode, but not used in liteloc network.
   model_init: null # If training is interrupted by mistake, you can set this variable to continue the training.
+  project_name: LiteLoc-main # name of the project is used to generate absolute path
