--- a/train_params_demo_fig3d.yaml
+++ b/train_params_demo_fig3d.yaml
@@ -1,5 +1,5 @@
 Camera:
-  camera: 'sCMOS'  # 'sCMOS' or 'EMCCD'
+  camera: sCMOS  # 'sCMOS' or 'EMCCD'
   em_gain: 1.0  # If 'sCOMS' is used, em_gain should be set as 1.0.
   surv_p: 0.5  # Probability of on-state emitters appear in the next frame follows a simple binomial distribution since only three consecutive images are used in each unit.
   qe: 0.95  # Quantum efficiency
@@ -9,20 +9,20 @@ Camera:
   baseline: 100.0  # Final offset added to the image
 PSF_model:
   z_scale: 3000
-  simulate_method: 'vector'  # 'spline' or 'vector'
+  simulate_method: vector  # 'spline' or 'vector'
   spline_psf:
-    calibration_file: "/home/user_name/datasets/demo-fig3d/Beads of 6um DMO Tetrapod PSF/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat" #Please give an absolute path.
+    calibration_file: /calibrate_mat/Beads of 6um DMO Tetrapod PSF/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat #Please give an absolute path.
     psf_extent:
     - - -0.5
       - 127.5
     - - -0.5
       - 127.5
     - None
-    device_simulation: 'cuda'
+    device_simulation: cuda
   vector_psf:
     objstage0: -800  # Nominal focal plane with respect to the coverslip, it should be set carefully when there is a refractive index (RI) mismatch between `refmed` and `refimm`. If there is no RI mismatch, `objstage0` becomes meaningless.
     zemit0: null
-    zernikefit_file: "/home/user_name/datasets/demo-fig3d/Beads of 6um DMO Tetrapod PSF/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat" # Only if 'zernikefit_file' is null, parameter setting below works.
+    zernikefit_file: /calibrate_mat/Beads of 6um DMO Tetrapod PSF/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat # Only if 'zernikefit_file' is null, parameter setting below works.
     pixelSizeX: 110
     pixelSizeY: 110
     psfSizeX: 51
@@ -46,12 +46,13 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 2000
   - 20000
-  result_path: "/home/user_name/results/network-demo-fig3d/"  # Please give an absolute path. Path to save trained model
-  infer_data:  "/home/user_name/datasets/demo-fig3d/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3_MMStack_Pos0.ome.tif"  # Please give an absolute path. Path of experimental data
+  result_path: /training_model/liteloc_fig3d/  # Please give an absolute path. Path to save trained model
+  infer_data:  /dataset/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3_MMStack_Pos0.ome.tif  # Please give an absolute path. Path of experimental data
   bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
   pn_factor: 0.2  # Should be in the range of [0,1], which implies PV degree of the added Perlin nonuniform background, set it small when experimental background looks uniform.
   pn_res: 64  # Resolution(or frequency) of the Perlin noise.
-  factor: null  # To be comparable with decode, but not used in liteloc network.
-  offset: null  # To be comparable with decode, but not used in liteloc network.
+  factor: null  # To be compatible with decode, but not used in liteloc network.
+  offset: null  # To be compatible with decode, but not used in liteloc network.
   model_init: null # If training is interrupted by mistake, you can set this variable to continue the training.
+  project_name: LiteLoc-main  # name of the project is used to generate absolute path
