--- a/infer_params_demo_fig3a.yaml
+++ b/infer_params_demo_fig3a.yaml
@@ -1,8 +1,8 @@
 Loc_Model:
-  model_path:  "home/user_name/results/network-demo-fig3a/checkpoint.pkl"  # Path of trained model.
+  model_path:  /home/feiyue/liteloc_git/training_model/liteloc_v2_debug/checkpoint.pkl  # Absolute path of trained model.
 Multi_Process:
-  image_path: "/home/user_name/datasets/demo-fig3a/NPC_U2OS_640_40mw_20ms_256_2/"  # Path of experimental data. If multiple files need to be analysed, you should set a directory path; Otherwise, please give a file path.
-  save_path: "/home/user_name/liteloc_demo_fig3a_result.csv" # Path to save molecule list results.
+  image_path: /home/feiyue/liteloc_git/dataset/m1_oil_astig_npc/  # Absolute path of experimental data. If multiple files need to be analysed, you should set a directory path; Otherwise, please give a file path.
+  save_path: /home/feiyue/liteloc_git/dataset/m1_oil_astig_npc/liteloc_demo_fig3a_result.csv # Absolute path to save molecule list results.
   time_block_gb: 1  # Size (GB) of the data block loaded into the RAM iteratively, to deal with the large data problem.
   batch_size: 30  # Batch size for analyzing the sub-FOVs data for every GPU. The larger the faster, but more GPU memory.
   sub_fov_size: 256  # Size of sub-areas to be analyzed, must be a multiple of 4 (avoid error when down-sampling or up-sampling). If this is larger than whole image size, the entire image will be analyzed.
