--- a/train_params_demo_fig3d.yaml
+++ b/train_params_demo_fig3d.yaml
@@ -11,7 +11,7 @@ PSF_model:
   z_scale: 3000
   simulate_method: vector  # 'spline' or 'vector'
   spline_psf:
-    calibration_file: /calibrate_mat/Beads of 6um DMO Tetrapod PSF/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat #Please give an absolute path.
+    calibration_file: /calibrate_mat/Beads of 6um DMO Tetrapod PSF/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat #Please give an relative path.
     psf_extent:
     - - -0.5
       - 127.5
@@ -46,7 +46,7 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 2000
   - 20000
-  result_path: /training_model/liteloc_fig3d/  # Please give an absolute path. Path to save trained model
+  result_path: /training_model/liteloc_fig3d/  # Please give an relative path. Path to save trained model
   infer_data:  /dataset/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3_MMStack_Pos0.ome.tif  # Please give an absolute path. Path of experimental data
   bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
