--- a/train_params_demo_fig3a.yaml
+++ b/train_params_demo_fig3a.yaml
@@ -11,7 +11,7 @@ PSF_model:
   z_scale: 700
   simulate_method: vector # 'spline' or 'vector'
   spline_psf:
-    calibration_file: /calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat  #Please give an relative path.
+    calibration_file: /calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat  #Please give an relative path.
     psf_extent:
     - - -0.5
       - 63.5
@@ -22,7 +22,7 @@ PSF_model:
   vector_psf:
     objstage0: -500  # Nominal focal plane with respect to the coverslip, it should be set carefully when there is a refractive index (RI) mismatch between `refmed` and `refimm`. If there is no RI mismatch, `objstage0` becomes meaningless.
     zemit0: null
-    zernikefit_file: /calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat  # Only if 'zernikefit_file' is null, parameter setting below works.
+    zernikefit_file: /calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat  # Only if 'zernikefit_file' is null, parameter setting below works.
     pixelSizeX: 110
     pixelSizeY: 110
     psfSizeX: 51
@@ -47,7 +47,7 @@ Training:
   - 4000
   - 40000
   result_path: /training_model/liteloc_fig3a/  # Please give a relative path. Path to save trained model
-  infer_data: /home/feiyue/liteloc_git/dataset/m1_oil_astig_npc/NPC_U2OS_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
+  infer_data: /home/feiyue/liteloc_git/datasets/demo-fig3a/NPC_U2OS_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
   bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
   pn_factor: 0.2  # Should be in the range of [0,1], which implies PV degree of the added Perlin nonuniform background, set it small when experimental background looks uniform.
@@ -55,4 +55,4 @@ Training:
   factor: null  # To be compatible with decode, but not used in liteloc network.
   offset: null  # To be compatible with decode, but not used in liteloc network.
   model_init: null # If training is interrupted by mistake, you can set this variable to continue the training.
-  project_name: liteloc_git # name of the project is used to generate absolute path
+  project_name: LiteLoc-main # name of the project is used to generate absolute path
