--- a/train_params_demo_fig3d.yaml
+++ b/train_params_demo_fig3d.yaml
@@ -9,9 +9,9 @@ Camera:
   baseline: 100.0  # Final offset added to the image
 PSF_model:
   z_scale: 3000
-  simulate_method: vector  # 'spline' or 'vector'
+  simulate_method: spline  # 'spline' or 'vector'
   spline_psf:
-    calibration_file: /calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat #Please give an relative path.
+    calibration_file: ./calibrate_mat/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat #Please give an relative path.
     psf_extent:
     - - -0.5
       - 127.5
@@ -22,7 +22,7 @@ PSF_model:
   vector_psf:
     objstage0: -800  # Nominal focal plane with respect to the coverslip, it should be set carefully when there is a refractive index (RI) mismatch between `refmed` and `refimm`. If there is no RI mismatch, `objstage0` becomes meaningless.
     zemit0: null
-    zernikefit_file: /calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat # Only if 'zernikefit_file' is null, parameter setting below works.
+    zernikefit_file: ./calibrate_mat/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat # Only if 'zernikefit_file' is null, parameter setting below works.
     pixelSizeX: 110
     pixelSizeY: 110
     psfSizeX: 51
@@ -34,6 +34,7 @@ PSF_model:
     zernikefit_map: null
     psfrescale: 0.5
     Npupil: 64
+    robust_training: False
 Training:
   max_epoch: 50  # Every epoch includes 'eval_iteration' training times.
   eval_iteration: 500  # Evaluation will be done per 'eval_iteration' training times.
@@ -46,8 +47,8 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 2000
   - 20000
-  result_path: /training_model/liteloc_fig3d/  # Please give an relative path. Path to save trained model
-  infer_data:  /home/feiyue/LiteLoc-main/datasets/demo-fig3d/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3_MMStack_Pos0.ome.tif  # Please give an absolute path. Path of experimental data
+  result_path: ./training_model/liteloc_fig3d/  # Please give an relative path. Path to save trained model
+  infer_data:  ./dataset/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3_MMStack_Pos0.ome.tif  # Please give an absolute path. Path of experimental data
   bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
   pn_factor: 0.2  # Should be in the range of [0,1], which implies PV degree of the added Perlin nonuniform background, set it small when experimental background looks uniform.
@@ -55,4 +56,3 @@ Training:
   factor: null  # To be compatible with decode, but not used in liteloc network.
   offset: null  # To be compatible with decode, but not used in liteloc network.
   model_init: null # If training is interrupted by mistake, you can set this variable to continue the training.
-  project_name: LiteLoc-main  # name of the project is used to generate absolute path
