--- a/demo/demo-fig3a/train_params_demo_fig3a.yaml
+++ b/demo/demo-fig3a/train_params_demo_fig3a.yaml
@@ -47,7 +47,7 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 4000
   - 40000
-  result_path: ../../training_model/liteloc_fig3a/  # Please give a relative path. Path to save trained model
+  result_path: ../../results/liteloc_fig3a/  # Please give a relative path. Path to save trained model
   infer_data: ../../datasets/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/TOM20_NPC_U2OS_561_50mw_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
   bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
