--- a/demo/demo-fig3d/infer_params_demo_fig3d.yaml
+++ b/demo/demo-fig3d/infer_params_demo_fig3d.yaml
@@ -1,8 +1,8 @@
 Loc_Model:
-  model_path:  ./training_model/liteloc_fig3a/checkpoint.pkl  # Path of trained model.
+  model_path:  ../../results/liteloc_fig3a/checkpoint.pkl  # Path of trained model.
 Multi_Process:
-  image_path: ./datasets/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/  # Path of experimental data. If multiple files need to be analysed, you should set a directory path; Otherwise, please give a file path.
-  save_path: ./datasets/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/liteloc_fig3d_result.csv # Path to save molecule list results.
+  image_path: ../../datasets/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/  # Path of experimental data. If multiple files need to be analysed, you should set a directory path; Otherwise, please give a file path.
+  save_path: ../../datasets/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/liteloc_fig3d_result.csv # Path to save molecule list results.
   time_block_gb: 1  # Size (GB) of the data block loaded into the RAM iteratively, to deal with the large data problem.
   batch_size: 30  # Batch size for analyzing the sub-FOVs data for every GPU. The larger the faster, but more GPU memory.
   sub_fov_size: 296  # Size of sub-areas to be analyzed, must be a multiple of 4 (avoid error when down-sampling or up-sampling). If this is larger than whole image size, the entire image will be analyzed.
