--- a/test/param_train_liteloc_tetra6_npc.yaml
+++ b/test/param_train_liteloc_tetra6_npc.yaml
@@ -2,15 +2,15 @@ Camera:
   camera: 'sCMOS'
   em_gain: 1.0
   surv_p: 0.5
-  margin_empty: 0.1
-  qe: 0.95
-  spurious_c: 0.002
-  sig_read: 1.535
-  e_per_adu: 0.7471
+  margin_empty: 0.1  # invalid in the training
+  qe: 0.9
+  spurious_c: 0.2
+  sig_read: 1.1
+  e_per_adu: 0.43
   baseline: 100.0
 PSF_model:
   z_scale: 3000
-  simulate_method: 'spline'
+  simulate_method: 'vector'
   spline_psf:
     calibration_file: "/home/feiyue/liteloc_git/calibrate_mat/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal_newui.mat"
     psf_extent:
@@ -23,15 +23,15 @@ PSF_model:
   vector_psf:
     pixelSizeX: 110
     pixelSizeY: 110
-    objstage0: -800
-    psfSizeX: 51
+    objstage0: -0
+    psfSizeX: 61
     NA: 1.35
     refmed: 1.406
     refcov: 1.524
     refimm: 1.406
     wavelength: 680
     zernikefit_map: null
-    zernikefit_file: "/home/feiyue/liteloc_git/calibrate_mat/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal_newui.mat"
+    zernikefit_file: "/home/feiyue/liteloc_git/calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat"
     psfrescale: 0.5
     Npupil: 64
 Training:
@@ -39,17 +39,17 @@ Training:
   eval_iteration: 500
   batch_size: 16
   valid_frame_num: 100
-  em_per_frame: 6
+  em_per_frame: 10
   train_size:
   - 128
   - 128
   photon_range:
   - 1000
-  - 10000
-  result_path: '/home/feiyue/liteloc_git/training_model/liteloc_spline_tetra6_npc_no_margin/'
+  - 20000
+  result_path: '../results/training_model/fs_test_20240920/'
   infer_data: "/home/feiyue/npc_6um_data/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3_MMStack_Pos0.ome.tif"
   bg: null  # bg can be calculated from infer_data, but one of them need to not null.
   perlin_noise: True
-  pn_factor: 0.2
+  pn_factor: 0.5
   pn_res: 64
   model_init: null
