--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,34 @@ __pycache__
 /results/*
 !results/placeholder.txt
 /only_local
+test.yaml
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome.tif
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0_metadata.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1/comments.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1/DisplaySettings.json
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.fig
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_2/Astigmatism_Tetraspeck_beads_2um_50nm_256_2_MMStack_Pos0.ome.tif
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_2/Astigmatism_Tetraspeck_beads_2um_50nm_256_2_MMStack_Pos0_metadata.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_2/comments.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_2/DisplaySettings.json
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_3/Astigmatism_Tetraspeck_beads_2um_50nm_256_3_MMStack_Pos0.ome.tif
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_3/Astigmatism_Tetraspeck_beads_2um_50nm_256_3_MMStack_Pos0_metadata.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_3/comments.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_3/DisplaySettings.json
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_4/Astigmatism_Tetraspeck_beads_2um_50nm_256_4_MMStack_Pos0.ome.tif
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_4/Astigmatism_Tetraspeck_beads_2um_50nm_256_4_MMStack_Pos0_metadata.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_4/comments.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_4/DisplaySettings.json
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_5/Astigmatism_Tetraspeck_beads_2um_50nm_256_5_MMStack_Pos0.ome.tif
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_5/Astigmatism_Tetraspeck_beads_2um_50nm_256_5_MMStack_Pos0_metadata.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_5/comments.txt
+calibrate_mat/demo-fig3a/Astigmatism_Tetraspeck_beads_2um_50nm_256_5/DisplaySettings.json
+calibrate_mat/demo-fig3a/Parameter settings.jpg
+calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1/comments.txt
+calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1/DisplaySettings.json
+calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome.tif
+calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0_metadata.txt
+calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.fig
+calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat
+calibrate_mat/demo-fig3d/Parameter settings.jpg
