update demo description
training & inference script, gui utils in uitls folder

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1/DMO_6u
 calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.fig
 calibrate_mat/demo-fig3d/DMO_6um_Crimson_645_beads_defoucs_0_step_100nm_1_MMStack_Pos0.ome_3dcal.mat
 calibrate_mat/demo-fig3d/Parameter settings.jpg
+test2.yaml
+Untitled5.ipynb
