--- a/demo/demo1_astig_npc/train_params_demo1.yaml
+++ b/demo/demo1_astig_npc/train_params_demo1.yaml
@@ -9,7 +9,7 @@ Camera:
   baseline: 100.0  # Final offset added to the image
 PSF_model:
   z_scale: 700
-  simulate_method: spline # 'spline' or 'vector'
+  simulate_method: vector # 'spline' or 'vector'
   spline_psf:
     calibration_file: ../../calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat  #Please give an relative path.
     psf_extent:
@@ -21,11 +21,10 @@ PSF_model:
     device_simulation: cuda
   vector_psf:
     objstage0: -500  # Nominal focal plane with respect to the coverslip, it should be set carefully when there is a refractive index (RI) mismatch between `refmed` and `refimm`. If there is no RI mismatch, `objstage0` becomes meaningless.
-    zemit0: null
-    zernikefit_file: ../../calibrate_mat/Astigmatism_Crimson_645_beads_defoucs_0_50nm_1_MMStack_Pos0.ome_3dcal_test.mat  # Only if 'zernikefit_file' is null, parameter setting below works.
+    zernikefit_file: ../../beads_file/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0_calib_results.mat #../../calibrate_mat/Astigmatism_Crimson_645_beads_defoucs_0_50nm_1_MMStack_Pos0.ome_3dcal_test.mat  # Only if 'zernikefit_file' is null, parameter setting below works.
     pixelSizeX: 110
     pixelSizeY: 110
-    psfSizeX: 51
+    psfSizeX: 27
     NA: 1.5
     refmed: 1.406
     refcov: 1.524
@@ -47,9 +46,9 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 4000
   - 40000
-  result_path: ../../results/liteloc_fig3a/  # Please give a relative path. Path to save trained model
+  result_path: ../../results/liteloc_demo1_calibrate_python/  # Please give a relative path. Path to save trained model
   infer_data: ../../datasets/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/NPC_U2OS_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
-  bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
+  bg: 211  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
   pn_factor: 0.2  # Should be in the range of [0,1], which implies PV degree of the added Perlin nonuniform background, set it small when experimental background looks uniform.
   pn_res: 64  # Resolution(or frequency) of the Perlin noise.
