--- a/demo/demo4_uipsf/params_demo4_uipsf.yaml
+++ b/demo/demo4_uipsf/params_demo4_uipsf.yaml
@@ -8,7 +8,7 @@ Camera:
   e_per_adu: 0.7471  # Analog-to-digital conversion factor
   baseline: 100.0  # Final offset added to the image
 PSF_model:
-  z_scale: 700
+  z_scale: 1000
   simulate_method: ui_psf # 'spline' or 'vector'
   spline_psf:
     calibration_file: ../../calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat  #Please give an relative path.
@@ -63,8 +63,8 @@ Training:
   - 4000
   - 40000
   result_path: ../../results/liteloc_fig3a/  # Please give a relative path. Path to save trained model
-  infer_data: ../../datasets/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/TOM20_NPC_U2OS_561_50mw_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
-  bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
+  infer_data: null #../../datasets/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/TOM20_NPC_U2OS_561_50mw_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
+  bg: 135  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
   pn_factor: 0.2  # Should be in the range of [0,1], which implies PV degree of the added Perlin nonuniform background, set it small when experimental background looks uniform.
   pn_res: 64  # Resolution(or frequency) of the Perlin noise.
