--- a/demo/demo1_astig_npc/train_params_demo1.yaml
+++ b/demo/demo1_astig_npc/train_params_demo1.yaml
@@ -21,7 +21,7 @@ PSF_model:
     device_simulation: cuda
   vector_psf:
     objstage0: -500  # Nominal focal plane with respect to the coverslip, it should be set carefully when there is a refractive index (RI) mismatch between `refmed` and `refimm`. If there is no RI mismatch, `objstage0` becomes meaningless.
-    zernikefit_file: ../../beads_file/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0_calib_results.mat #../../calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat # Only if 'zernikefit_file' is null, parameter setting below works.
+    zernikefit_file: ../../calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat #../../calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat # Only if 'zernikefit_file' is null, parameter setting below works.
     pixelSizeX: 110
     pixelSizeY: 110
     psfSizeX: 27
@@ -46,7 +46,7 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 4000
   - 40000
-  result_path: ../../results/liteloc_demo1_test_0401/  # Please give a relative path. Path to save trained model
+  result_path: ../../results/liteloc_demo1/  # Please give a relative path. Path to save trained model
   infer_data: ../../datasets/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/NPC_U2OS_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
   bg: 211  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
