delete fs_test, modify the official demos, update the requirements.txt and readme to ensure easy installation

--- a/demo/demo1_astig_npc/train_params_demo1.yaml
+++ b/demo/demo1_astig_npc/train_params_demo1.yaml
@@ -54,4 +54,4 @@ Training:
   pn_res: 64  # Resolution(or frequency) of the Perlin noise.
   factor: null  # To be compatible with decode, but not used in liteloc network.
   offset: null  # To be compatible with decode, but not used in liteloc network.
-  model_init: null # If training is interrupted by mistake, you can set this variable to continue the training.
+  model_init: null # If specified, the model will be trained from existing network.
