--- a/demo/demo4_decode/infer_decode_spline_m1_oil_astig_npc.yaml
+++ b/demo/demo4_decode/infer_decode_spline_m1_oil_astig_npc.yaml
@@ -1,5 +1,5 @@
 Loc_Model:
-  model_path: ../../training_model/decode_spline_m1_oil_astig_npc_test/checkpoint.pkl
+  model_path: ../../results/decode_demo4/checkpoint.pkl
 Multi_Process:
   image_path: ../../datasets/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/
   save_path: ../../datasets/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/decode_integrate_spline_NPC_U2OS_561_50mw_640_40mw_20ms_256_2_MMStack_Pos0.csv
@@ -7,6 +7,7 @@ Multi_Process:
   batch_size: 32
   sub_fov_size: 256
   over_cut: 8
+  data_queue_size: 100  # Maximum number of batches in the queue for data loading, null for unlimited, increase it if the GPU is idle frequently.
   multi_gpu: False
   end_frame_num: null
   num_producers: 1
